--- a/druid-shell/Cargo.toml
+++ b/druid-shell/Cargo.toml
@@ -32,6 +32,22 @@ glib = { version = "0.8.1", optional = true }
 glib-sys = { version = "0.9.0", optional = true }
 gtk-sys = { version = "0.9.0", optional = true }
 
+[target.'cfg(target_os = "android")'.dependencies]
+jni-sys = "0.3.0"
+jni-glue = "0.0.9"
+jni-android-sys = {version = "0.0.9",  features = [
+    "android-os-Message",
+    "android-content-Context",
+    "java-lang-Runnable",
+    "android-view-View",
+    "android-os-Handler",
+    "android-content-res-Resources",
+    "android-util-DisplayMetrics",
+    "android-graphics-Canvas",
+    "android-view-KeyEvent",
+    "android-view-MotionEvent",
+    "api-level-28",
+]}
 
 [target.'cfg(target_os="windows")'.dependencies]
 directwrite = "0.1.2"
