Use github patch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ members = [
 
 [patch.crates-io]
 # My fork of Piet that has Piet-Android
-# piet-common = {git = "https://github.com/marcopolo/piet"}
-piet-common = {path = "../../piet/piet-common"}
+piet-common = {git = "https://github.com/marcopolo/piet"}
+# piet-common = {path = "../../piet/piet-common"}
 # Local fork that lets us turn Local and Argument int Global
 jni-glue = {git = "https://github.com/marcopolo/jni-bindgen", branch = "jni-glue-only"}
 # jni-glue = {path = "../jni-bindgen"}
