--- a/druid/Cargo.toml
+++ b/druid/Cargo.toml
@@ -15,6 +15,7 @@ default-target = "x86_64-pc-windows-msvc"
 
 [features]
 use_gtk = ["druid-shell/use_gtk"]
+android = ["druid-shell/android"]
 svg = ["usvg"]
 
 [badges]
